<resources>
    <string name="app_name">AppAdmin_VuTruongGiang</string>
    <string name="title">Quản Trị hệ thống OneFood</string>
    <string name="manage_food">Quản Lý Sản Phẩm</string>
    <string name="manage_res">Quản Lý Nhà Cung Cấp</string>
    <string name="manage_order">Quản Lý Đơn Hàng</string>
    <string name="manage_statistical">Xem Doanh Thu</string>
    <string name="EditRestaurant">Lưu</string>
    <string name="NameRestaurant">Tên Nhà Hàng</string>
    <string name="enterResName">Nhập tên nhà hàng</string>
    <string name="AddressRestaurant">Địa Chỉ Nhà Hàng</string>
    <string name="enterAddress">Nhập Địa Chỉ</string>
    <string name="HourOpen">Giờ mở cửa</string>
    <string name="HourClose">Giờ đóng cửa</string>
    <string name="ListFood">Danh Sách Đồ Ăn</string>
    <string name="NameFood">Tên Đồ Ăn</string>
    <string name="DetailFood">Chi Tiết Đồ Ăn</string>
    <string name="PriceFood">Giá Đồ Ăn</string>
    <string name="TypeFood">Loại Đồ Ăn</string>
    <string name="enterNameFood">Nhập Tên Đồ Ăn</string>
    <string name="enterDetailFood">Nhập Chi Tiết Đồ Ăn</string>
    <string name="enterPriceFood">Nhập Giá Đồ Ăn</string>
    <string name="fastFood">Đồ Ăn Nhanh</string>
    <string name="drink">Đồ Uống</string>
    <string name="rice">Cơm</string>
    <string name="idRes">Nhập ID Nhà Hàng</string>
    <string name="idFood">ID</string>
    <string name="enterIdFood">Nhập ID Đồ Ăn</string>
    <string name="listBill">Danh Sách Đơn Hàng</string>
    <string name="notPay">Chưa Thanh Toán</string>
    <string name="Payed">Đã Thanh Toán</string>
    <string name="into_money">Thành tiền: </string>
    <string name="ship">Phí vận chuyển:</string>
    <string name="discount">Giảm giá:</string>
    <string name="amount_money">Tổng tiền:</string>
</resources>