<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgButArrowBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/arrow_back" />

    <TextView
        android:id="@+id/tvFastFood"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/imgButArrowBack"
        android:drawableEnd="@drawable/arrow_right"
        android:gravity="left"
        android:text="@string/fastFood"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDrink"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableEnd="@drawable/arrow_right"
        android:gravity="left"
        android:text="@string/drink"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/tvFastFood" />

    <TextView
        android:id="@+id/tvRice"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableEnd="@drawable/arrow_right"
        android:gravity="left"
        android:text="@string/rice"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/tvDrink"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRice" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/butAdd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/but_add"
        android:text="Add"
        android:layout_alignParentBottom="true" />
</RelativeLayout>