<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/butBack"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_back" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:text="@string/EditRestaurant"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/border_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgFood"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="42dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/cart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgCamera"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/camera"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvIdFood"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/idFood"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/linear" />

            <EditText
                android:id="@+id/edIdFood"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/enterIdFood"
                android:padding="0dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvIdFood" />

            <View
                android:id="@+id/view0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#D2D2D2"
                app:layout_constraintTop_toBottomOf="@id/edIdFood" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/NameFood"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/view0" />

            <EditText
                android:id="@+id/edNameFood"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/enterNameFood"
                android:padding="0dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvFullName" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#D2D2D2"
                app:layout_constraintTop_toBottomOf="@id/edNameFood" />

            <TextView
                android:id="@+id/tvDetail"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/DetailFood"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <EditText
                android:id="@+id/edDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/enterDetailFood"
                android:padding="0dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvDetail" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#D2D2D2"
                app:layout_constraintTop_toBottomOf="@+id/edDetail" />

            <TextView
                android:id="@+id/tvPriceFood"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/PriceFood"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <EditText
                android:id="@+id/edPriceFood"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/enterDetailFood"
                android:inputType="number"
                android:padding="0dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceFood" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>