<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/butBack"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/tvSaveRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:text="@string/EditRestaurant"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tvListFoodRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/ListFood"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/border_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgRes"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="42dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/cart"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgCamera"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="-30dp"
                android:src="@drawable/camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgRes" />

            <TextView
                android:id="@+id/tvIdRes"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="ID"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/imgRes" />

            <EditText
                android:id="@+id/edIdRes"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/idRes"
                android:padding="0dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvIdRes" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/NameRestaurant"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/edIdRes" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/enterResName"
                android:padding="0dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvFullName" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#D2D2D2"
                app:layout_constraintTop_toBottomOf="@id/edName" />

            <TextView
                android:id="@+id/tvNumberPhone"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/AddressRestaurant"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <EditText
                android:id="@+id/edAddressRes"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/enterAddress"
                android:padding="0dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tvNumberPhone" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#D2D2D2"
                app:layout_constraintTop_toBottomOf="@+id/edAddressRes" />

            <TextView
                android:id="@+id/tvTitleOpenHour"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/HourOpen"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleOpenHour">

                <NumberPicker
                    android:id="@+id/NumPickerHourOpen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />

                <NumberPicker
                    android:id="@+id/NumPickerMinOpen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTitleCloseHour"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="80dp"
                android:text="@string/HourOpen"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleOpenHour" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleCloseHour">

                <NumberPicker
                    android:id="@+id/NumPickerHourClose"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />

                <NumberPicker
                    android:id="@+id/NumPickerMinClose"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>