<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vien_item_food"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNameBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Vu Truong Giang"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            android:drawableEnd="@drawable/question"/>

        <TextView
            android:id="@+id/tvTime"
            android:text="vu truong giang"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/tvAddress"
            android:textAlignment="center"
            android:textStyle="normal"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="Vu Truong Giang"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/tvSDT"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="0968942633"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/data_sum_dagiao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44812"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sum_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_toLeftOf="@+id/tvVND"
                android:text="500000"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text=" VND"
                android:textSize="25dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/ship" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="20000 VND" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/discount" />

            <TextView
                android:id="@+id/tvMaGiamGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/amount_money"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTotalPayable"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />
        </RelativeLayout>

        <TextView
            android:id="@+id/but_order_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/but_order_cart"
            android:text="@string/notPay"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>