<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#F89503"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manageCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/vien">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgLogo2"
                    android:src="@drawable/cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvManageCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/manage_order"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manageStatistical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/vien">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgLogo3"
                    android:src="@drawable/sum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvNameManageStatistical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/manage_statistical"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/cardView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manageRestaurant"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/vien">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgLogo1"
                    android:src="@drawable/restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvNameManageRestaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/manage_res"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/cardView1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>